<resources>
    <string name="app_name">DivCalendar</string>

    <!-- common -->
    <string name="portfolio">Portfolio</string>
    <string name="calendar">Calendar</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="enter_request">Enter your request</string>
    <string name="no_connection">No connection</string>
    <string name="empty_list">Empty list</string>
    <string name="empty_securities">Your portfolio is empty. Add a security to it!</string>
    <string name="empty_payments">There are no payments on your securities for %s!</string>

    <string name="currency_rub_name" translatable="false">₽</string>
    <string name="currency_usd_name" translatable="false">$</string>
    <string name="currency_eur" translatable="false">€</string>

    <string name="value_percent" translatable="false">%1$.2f\%%</string>

    <string name="currency_name_rub" translatable="false">RUB</string>
    <string name="currency_name_usd" translatable="false">USD</string>

    <string name="version_name" translatable="false">DivCalendar %s</string>

    <!--calendar screen-->
    <string name="payout_chart">Payout chart</string>
    <string name="annual_income">Income</string>
    <string name="annual_yield">Yield</string>
    <string name="monthly_income_label">Monthly income: +%s</string>
    <string name="count_securities">%s pcs.</string>
    <string name="dividends">+%1$.2f₽</string>
    <string name="taxes_included">Accounting for taxes</string>
    <string name="taxes_excluding">Ignoring taxes</string>
    <string name="edit_payments">Edit payments</string>
    <string name="export_payments">Export payments</string>

    <!-- search -->
    <string name="total_price">Total price: %s</string>
    <string name="count">Count</string>
    <string name="price">Price</string>
    <string name="start_search">Start searching</string>
    <string name="stocks">Stocks</string>
    <string name="bonds">Bonds</string>
    <string name="russian">Russian</string>
    <string name="foreign">Foreign</string>
    <string name="add_security_successful">Successfully added a security package to the portfolio</string>

    <!--portfolio -->
    <string name="sec_count">%s pcs.</string>
    <string name="yield_in_year">%1$.2f\%% in year</string>
    <string name="change_package">Change package</string>
    <string name="delete_entire_package">Delete entire package</string>
    <string name="cost">Cost</string>
    <string name="new_portfolio">New portfolio</string>
    <string name="name">Name</string>
    <string name="create_new_portfolio">Creating a portfolio</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="collect_portfolio">Collect portfolio</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="sure_remove_portfolio">Are you sure you want to delete the portfolio \'%s\'?</string>
    <string name="empty_portfolio_name_error">The portfolio name must have at least one letter</string>
    <string name="not_new_portfolio_name_error">Portfolio name must be unique</string>
    <string name="edit_portfolio_with_name">Edit portfolio \'%s\'</string>
    <string name="small_count_portfolio">This is the only portfolio. You cannot delete it.</string>
    <string name="total_portfolio_cost">Total: %s</string>
    <string name="security_without_payout">No payout</string>
    <string name="sort_portfolio">Sort</string>
    <string name="sort_portfolio_by_payment_date">By payout date</string>
    <string name="sort_portfolio_by_profitability">By profitability</string>
    <string name="sort_portfolio_by_alphabetically">By alphabetically</string>

    <!--help-->
    <string name="telegram_question">Ask a question in Telegram chat</string>
    <string name="help_to_use">How to use DivCalendar?</string>

    <!--onboarding-->
    <string name="onboarding_portfolio_title">Portfolio</string>
    <string name="onboarding_calendar_title">Calendar</string>
    <string name="onboarding_help_title">Having a problem?</string>
    <string name="onboarding_portfolio_message">On the \"Portfolio\" tab you can\nadd your financial instruments</string>
    <string name="onboarding_calendar_message">On the \"Calendar\" tab you can\nsee the annual dividend plan</string>
    <string name="onboarding_help_message">In our <annotation type="help_link">Telegram chat</annotation> we promptly\nanswer all incoming questions!</string>
    <string name="onboarding_farther_button">Further</string>
    <string name="onboarding_end_button">Got it</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="account_for_taxes">Account for taxes</string>
    <string name="hide_copecks">Hide copecks</string>
    <string name="scrolling_calendar_for_current_year">Scroll the calendar for the current month</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_on">On</string>
    <string name="dark_theme_off">Off</string>
    <string name="dark_theme_automatically">Automatically</string>
    <string name="dark_theme_automatically_description">The theme changes automatically depending on your phone settings</string>
    <string name="feedback">Feedback</string>
    <string name="email_developers">Email developers</string>
    <string name="telegram_chat">Telegram chat</string>
    <string name="purchase_subscription">Purchase subscription</string>
    <string name="something_went_wrong">Something went wrong?</string>
    <string name="tell_about_problem">Tell us about your problem and within 12 hours we will review your report!</string>
    <string name="your_message">Your message…</string>
    <string name="send">Send</string>
    <string name="send_successful">Message successfully sent to developers</string>
    <string name="symbol_count">Characters: %1$d</string>

    <!-- export file -->
    <string name="title_sheet_portfolio">Portfolio</string>
    <string name="title_sheet_payments">Payments</string>

    <string name="title_portfolio_value_isin" translatable="false">ISIN</string>
    <string name="title_portfolio_value_name">Name</string>
    <string name="title_portfolio_value_ticker">Ticker</string>
    <string name="title_portfolio_value_type">Type</string>
    <string name="title_portfolio_value_exchange">Exchange</string>
    <string name="title_portfolio_value_logo">Logo</string>
    <string name="title_portfolio_value_annual_yield">Annual yield</string>
    <string name="title_portfolio_value_count">Count</string>
    <string name="title_portfolio_value_total_price">Total price</string>
    <string name="title_portfolio_value_currency">Currency</string>

    <string name="title_payments_value_isin" translatable="false">ISIN</string>
    <string name="title_payments_value_security">Security</string>
    <string name="title_payments_value_count">Count</string>
    <string name="title_payments_value_approved">Approved</string>
    <string name="title_payments_value_data">Payment date</string>
    <string name="title_payments_value_diviens">Dividends</string>
    <string name="title_payments_value_currency">Currency</string>

    <string name="cell_value_no">No</string>
    <string name="cell_value_yes">Yes</string>
    <string name="cell_value_stock">Stock</string>
    <string name="cell_value_bond">Bond</string>

    <string name="final_file_name">DivCalendar - Payments</string>

    <!-- billing -->
    <string name="purchase">Purchase</string>
    <string name="purchase_subscription_title">Want to purchase a subscription?</string>
    <string name="purchase_subscription_description">
        In the premium version of the application you will be able to: \n\n

        · Creating multiple portfolios \n
        · Editing portfolio \n
        · Adding more than 3 securities to the portfolio \n
    </string>
    <string name="billing_unavailable">Your device does not support purchasing subscriptions</string>
    <string name="subscription_purchased">You already have a subscription</string>
    <string name="week_free">Week free</string>
    <string name="actual_company_news">Actual company news</string>
    <string name="subscription_details">Subscription details</string>
    <string name="current_payout_information">Current regular payout information</string>
    <string name="next_subscription_price">Next 119 rubles per month</string>
    <string name="follow_the_news">Follow the news of those companies that may affect your earnings</string>
    <string name="multiply_finances">Multiply your finances</string>
    <string name="stay_on_top_of_latest_dividend">Stay on top of the latest dividend and coupon payment news</string>
    <string name="seven_days_free">7 days for free with a Premium subscription</string>
    <string name="first_charge_info">The first charge will be when the free period ends. You can cancel at any time.</string>
    <string name="please_wait">Please wait…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
