<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sort_portfolio"
        android:textColor="?attr/textColorPrimary"
        android:textSize="@dimen/font_few_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/sortTypeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/titleTextView"
        app:layout_constraintStart_toStartOf="@+id/titleTextView"
        app:layout_constraintTop_toBottomOf="@id/titleTextView">

        <RadioButton
            android:id="@+id/nextPayoutDateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/font_normal"
            android:text="@string/sort_portfolio_by_payment_date"
            android:theme="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/profitabilityRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/font_normal"
            android:text="@string/sort_portfolio_by_profitability"
            android:theme="@style/RadioButton"/>

        <RadioButton
            android:id="@+id/alphabeticallyRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/roboto"
            android:textSize="@dimen/font_normal"
            android:text="@string/sort_portfolio_by_alphabetically"
            android:theme="@style/RadioButton"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>