<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/purchase_subscription_title"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/font_few_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView"
        android:text="@string/purchase_subscription_description" />

    <Button
        android:id="@+id/buySubscriptionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/purchase"
        android:textAllCaps="false"
        android:textColor="@color/colorActive"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorTextSecondary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buySubscriptionButton"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>