<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/something_went_wrong"
        android:textColor="?attr/textColorPrimary"
        android:textSize="@dimen/font_few_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:textColor="?attr/textColorSecondary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:text="@string/tell_about_problem" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reportInputLayout"
        android:theme="@style/TextInputTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/your_message"
        app:counterMaxLength="300"
        app:counterEnabled="true"
        app:counterTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reportEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:fontFamily="@font/roboto"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="?attr/textColorSecondary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendButton"
        app:layout_constraintTop_toBottomOf="@+id/reportInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>