<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:textColor="?android:textColorPrimary"
        android:gravity="center"
        android:textSize="@dimen/font_few_big"
        android:padding="16dp"
        android:text="@string/create_new_portfolio"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/portfolioNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/name"
        android:theme="@style/TextInputTheme">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/portfolioNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textShortMessage"
            android:maxLength="32" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/createPortfolioButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_button_active_primary"
        android:fontFamily="@font/roboto"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginBottom="16dp"
        android:textSize="@dimen/font_small" />
</LinearLayout>