<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto"
        android:text="@string/sure_remove_portfolio"
        android:textColor="?attr/textColorPrimary"
        android:textSize="@dimen/font_few_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="?attr/textColorSecondary"
        android:textSize="@dimen/font_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/messageTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>